8337994: [REDO] Native memory leak when not recording any events

Reviewed-by: egahlin